; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/libc-pwcache/extr_pwcache.c_usrtb_start.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/libc-pwcache/extr_pwcache.c_usrtb_start.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@usrtb = common dso_local global i32** null, align 8
@usrtb_fail = common dso_local global i64 0, align 8
@UNM_SZ = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 ()* @usrtb_start to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @usrtb_start() #0 {
  %1 = alloca i32, align 4
  %2 = load i32**, i32*** @usrtb, align 8
  %3 = icmp ne i32** %2, null
  br i1 %3, label %4, label %5

4:                                                ; preds = %0
  store i32 0, i32* %1, align 4
  br label %18

5:                                                ; preds = %0
  %6 = load i64, i64* @usrtb_fail, align 8
  %7 = icmp ne i64 %6, 0
  br i1 %7, label %8, label %9

8:                                                ; preds = %5
  store i32 -1, i32* %1, align 4
  br label %18

9:                                                ; preds = %5
  %10 = load i32, i32* @UNM_SZ, align 4
  %11 = call i64 @calloc(i32 %10, i32 8)
  %12 = inttoptr i64 %11 to i32**
  store i32** %12, i32*** @usrtb, align 8
  %13 = icmp eq i32** %12, null
  br i1 %13, label %14, label %17

14:                                               ; preds = %9
  %15 = load i64, i64* @usrtb_fail, align 8
  %16 = add nsw i64 %15, 1
  store i64 %16, i64* @usrtb_fail, align 8
  store i32 -1, i32* %1, align 4
  br label %18

17:                                               ; preds = %9
  store i32 0, i32* %1, align 4
  br label %18

18:                                               ; preds = %17, %14, %8, %4
  %19 = load i32, i32* %1, align 4
  ret i32 %19
}

declare dso_local i64 @calloc(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
